--- a/index.html
+++ b/index.html
@@ -113,36 +113,9 @@
                             contribute expertise in organizational management,
                             communication, and problem-solving...
                         </p>
-                        <div>
+                        <div class="container">
                             <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a>
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn btn-outline-light fw-bold" data-toggle="modal"
-                                data-target="#exampleModalLong">
-                                Projects
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
-                                aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            ...
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
