made modifications to the resume and added a loader

--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,9 @@
     <!-- the header section -->
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">logo</a>
+            <a class="navbar-brand" href="./index.html">
+                <img class="img-fluid" src="./assets/Img/Rosie logo.png" width="50" height="30" alt="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +45,7 @@
         <div class="container-fluid pt-5">
             <h2 class="text-center display-3 fw-bold py-3 text-success">Resume</h2>
             <div class="container d-flex justify-content-around py-3">
-                <a href="#" class="btn btn-lg  btn-success">Experience</a>
+                <a href="#skills" class="btn btn-lg  btn-success">Experience</a>
                 <a href="./download/RoseMary CV.pdf" download="RoseMary CV.pdf" class="btn btn-lg  btn-success fw-bolder"><i class="bi bi-download"></i> DOWNLOAD CV</a>
             </div>
             <div class="row justify-content-center">
@@ -52,7 +54,7 @@
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
                             <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
-                                    2017 - Present
+                                    2019 - Present
                                 </p>
                                 <h6 class="text-success">✓ Bookshop Assistant:
                                 </h6>
@@ -79,7 +81,7 @@
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
                             <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
-                                    2017 - Present
+                                    2018 - 2019
                                 </p>
                                 <h6>✓ Receptionist</h6>
                                 <p class="text-success p-2">
@@ -111,9 +113,9 @@
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
                             <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-5 text-success fw-bold pt-3 px-1">
-                                    2017 - Present
+                                    2017
                                 </p>
-                                <h6>✓Classroom Teacher (Chemistry and Basic Science):</h6>
+                                <h6>✓ Classroom Teacher (Chemistry and Basic Science):</h6>
                                 <p class="p-2">
                                     Godfrey Okoye University and its Group of Institutions.
                                 </p>
@@ -141,7 +143,7 @@
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
                             <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
-                                    2017 - Present
+                                    2015 - 2016
                                 </p>
                                 <h6>✓ Community Secondary School, Ejure, Ofante, Kogi State.
                                     NYSC Classroom Teacher for</h6>
@@ -165,7 +167,7 @@
         </div>
     </section>
     <!-- Skill section -->
-    <section class="mt-5 pt-3">
+    <section class="mt-5 pt-3" id="skills">
         <h2 class="text-success text-center fw-bold">Skills</h2>
         <div class="container shadow rounded pb-5 ">
             <div class="row align-items-center justify-content-center px-4">
@@ -280,6 +282,7 @@
         crossorigin="anonymous"></script>
         <!-- AOS SCRIPT -->
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="./script.js"></script>
 
         <script>
             AOS.init();
