--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 </head>
 
 <body class="bg-secondary">
+    <div id="preloader"></div>
     <!-- the header section -->
-    <nav class="navbar navbar-expand-lg sticky-top bg-light">
+    <nav class="navbar navbar-expand-lg -top bg-light">
         <div class="container">
             <a class="navbar-brand" href="./index.html">
                 <img class="img-fluid" src="./assets/Img/Rosie logo.png" width="50" height="30" alt="logo">
@@ -48,9 +49,9 @@
                 <div class="col-sm-6 col-md-5 col-lg-6" data-aos="fade-right" data-aos-duration="3000">
                     <div class="container">
                         <h4>This is me</h4>
-                        <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
+                        <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie <span class="text text-dark">A Scientist and Explorer.</span></h2>
                         <p>
-                            A Scientist and Explorer
+                            
                             Dedicated and skilled professional with experience in administrative roles, organizational
                             management,
                             communication, and problem-solving.
@@ -114,12 +115,16 @@
                             communication, and problem-solving...
                         </p>
                         <div class="container">
-                            <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a> 
+                            <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/pOKnnQ4ktAE" title="HumanPal"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
     </section>
 
     <!-- contact section -->
@@ -152,8 +157,8 @@
                             <i class="bi bi-envelope-at text-success "></i>
                         </div>
                         <p class="text-italic mx-3 my-3">
-                            <a href="janerosie52@gmail.com">janerosie52@gmail.com</a><br>
-                            <em class="text-body-secondary">Send us a queary anytime.</em>
+                            <a href="httpa://www.janerosie52@gmail.com">janerosie52@gmail.com</a><br>
+                            <em class="text-body-secondary">Send us a query anytime.</em>
                         </p>
                     </div>
                 </div>
@@ -218,6 +223,7 @@
 
     <!-- AOS SCRIPT -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./script.js"></script>
 
     <script>
         AOS.init();
