made some modifications on the about page

--- a/about-me.html
+++ b/about-me.html
@@ -20,6 +20,7 @@
 </head>
 
 <body class="">
+    <div id="preloader"></div>
     <!-- the header section -->
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
         <div class="container">
@@ -278,7 +279,7 @@
     <!-- education -->
     <section>
         <div class="container-fluid mt-5">
-            <h2 class="text-success text-center fw-bold">Education</h2>
+            <h2 class="text-success text-center fw-bold mt-5 pt-5">Education</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
@@ -303,6 +304,63 @@
                                         of Science and Technology (ESUT).
                                         .</li>
                                     <li> Senior School Certificate (SSCE) 2006: Isiuzo Secondary School, Ikem, Neke.
+                                    </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Certification -->
+    <section>
+        <div class="container-fluid mt-5">
+            <h2 class="text-success text-center fw-bold mt-5 pt-5">Certification</h2>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 py-3">
+                    <div class="card rounded-3 shadow p-5">
+                        <div class="row justify-content-center align-items-center gx-5 gy-4">
+                            <div class="col-lg-5 col-md-6 rounded bg-sec text-light text-center px-1">
+                                <!-- <p class="fs-4 text-success fw-bold pt-2">
+                                    2022
+                                </p>
+                                <p class="fs-5 text-success fw-bold pt-2">
+                                    2016
+                                </p>
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    (SSCE) 2006.
+                                </p>
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    (SSCE) 2006.
+                                </p>
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    2008
+                                </p> -->
+                                <div class="fs-1">
+                                    <i class="bi bi-mortarboard-fill fs-1"></i>
+                                </div>
+                                
+                            </div>
+                            <div class="col-lg-7 col-md-6">
+                                <ul>
+                                    <li>
+                                        2022: Advanced Digital Appreciation Programme for Tertiary Institutions
+                                    </li>
+                                    <li>
+                                        2016: Certificate of National Youth Service Corps (NYSC).</li>
+                                    <li> 
+                                         2017: Certificate of Merit/Proficiency on Modern Techniques of Agricultural
+                                        Investment/Entrepreneurship training and skill acquisition. 
+                                    </li>
+                                    <li> 
+                                         2011: Diploma Certificate in Ms-windows, Ms-excel, Ms-word, Ms-access,
+                                        PowerPoint, CorelDraw, and Internet.
+                                        
+                                    </li>
+                                    <li> 
+                                         2008: Certificate of Participation: Young Catholic Students of Nigeria.
                                     </li>
 
                                 </ul>
