--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,9 @@
 </head>
 
 <body class="bg-secondary">
+    <div id="preloader"></div>
     <!-- the header section -->
-    <nav class="navbar navbar-expand-lg sticky-top bg-light">
+    <nav class="navbar navbar-expand-lg  bg-light">
         <div class="container">
             <a class="navbar-brand" href="./index.html">
                 <img class="img-fluid" src="./assets/Img/Rosie logo.png" width="50" height="30" alt="logo">
@@ -136,6 +137,7 @@
         crossorigin="anonymous"></script>
           <!-- AOS SCRIPT -->
           <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+          <script src="./script.js"></script>
 
           <script>
               AOS.init();
