--- a/index.html
+++ b/index.html
@@ -121,10 +121,7 @@
                 </div>
             </div>
         </div>
-        <iframe width="853" height="480" src="https://www.youtube.com/embed/pOKnnQ4ktAE" title="HumanPal"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+      
     </section>
 
     <!-- contact section -->
@@ -145,11 +142,11 @@
                     </div>
                     <div class="d-flex justify-content-center">
                         <div class="fs-1 my-2">
-                            <i class="bi bi-telephone-inbound text-success "></i>
+                            <a href="tel:+2347062666832" data-type="phone"><i class="bi bi-telephone-inbound text-success "></i></a>
                         </div>
                         <p class="text-italic mx-3 my-3">
                             07062666832<br>
-                            <em class="text-body-secondary">Monday-Friday 8am - 6pm</em>
+                            <em class="text-body-">Monday-Friday 8am - 6pm</em>
                         </p>
                     </div>
                     <div class="d-flex justify-content-center">
