--- a/resume.html
+++ b/resume.html
@@ -227,6 +227,7 @@
                         aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-success fs-3 py-5 text-success" style="width: 90%">90%</div>
                     </div>
+                    
                 </div>
             </div>
         </div>
@@ -270,6 +271,7 @@
             </div>
         </div>
     </section>
+        </form>
     <footer class="container-fluid text-light text-center bg-dark py-2">
         <h5>&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
     </footer>
